--- a/index.html
+++ b/index.html
@@ -6,5 +6,14 @@
     </head>
     <body>
         <div id="top-container"></div>
+       <div id="margarita-details"> 
+        <h1 class= "name" ></h1>
+        <p class= "instructions"></p>
+        <p class="ingredients"></p>
+        <p class="glass"></p>
+        <img class="image"> 
+
+       </div> 
+       
     </body>
 </html>
