--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
     <head>
         <link href="style.css" rel="stylesheet">
         <script defer src="index.js"></script>
+        <title>Meowgaritaville</title>
     </head>
     <body>
+        <h1> Welcome to Meowgaritaville</h1>
         <div id="top-container"></div>
         
        <div id="margarita-details"> 
-        <h1 class= "name" >Margarita</h1>
+        <h2 class= "name" >Margarita</h2>
         <ul class="ingredients">1 1/2 oz Tequila, 1/2 oz Triple sec, 1 oz Lime juice, Salt</ul>
         <p class="glass">Cocktail Glass</p>
         <p class= "instructions">Rub the rim of the glass with the lime slice to make the salt stick to it. Take care to moisten only the outer rim and sprinkle the salt on it. The salt should present to the lips of the imbiber and never mix into the cocktail. Shake the other ingredients with ice, then carefully pour into the glass.</p>
