--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
         <div id="top-container"></div>
         
        <div id="margarita-details"> 
-        <h2 class= "name" >Margarita</h2>
+        <h2 class= "name" >The Classic Margarita</h2>
+        <h3 id ="ingredients-space">Ingredients:</h3>
         <ul class="ingredients">1 1/2 oz Tequila, 1/2 oz Triple sec, 1 oz Lime juice, Salt</ul>
+        <h3 id="glass-space">Glass Type:</h3>
         <p class="glass">Cocktail Glass</p>
+        <h3 id =instructions-space>Cocktail Instructions:</h3>
         <p class= "instructions">Rub the rim of the glass with the lime slice to make the salt stick to it. Take care to moisten only the outer rim and sprinkle the salt on it. The salt should present to the lips of the imbiber and never mix into the cocktail. Shake the other ingredients with ice, then carefully pour into the glass.</p>
         <img class="image" src="https://www.thecocktaildb.com/images/media/drink/5noda61589575158.jpg"> 
        </div> 
