started the comment section

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
        </div> 
        <div id="form-wrapper">
         <button id ="add-new-marg" >Add Your Own Margarita!</button>
-       <form id="new-marg" class="user-form">
+        <form id="new-marg" class="user-form">
             <label for="name">Name</label>
                 <input type="text" name="name" id="marg-name">
             <label for="ingredients">Ingredients</label>
@@ -33,7 +33,17 @@
             <label for="instructions">Instructions</label>
                 <textarea name="instructions" id="marg-instructions"></textarea>
             <input type="submit" value="Bottoms Up!" id="submit-marg">
-       </form>  
+        </form>  
+        </div>
+        <div id="comment-div">
+            <h2 id="comment-header">We all have that one margarita story, what's yours?</h2>
+            <form id="comment-form">
+                <textarea name="comments" id="user-comments"></textarea>
+                <input type="submit" value="Submit" id="submit-comment">
+            </form>
+        </div>
+        <div id="comment-story">
+
         </div>
     </body>
 </html>
