--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
         <button id ="add-new-marg" >Add Your Own Margarita!</button>
         <form id="new-marg" class="user-form">
             <label for="name">Name</label>
-                <input type="text" name="name" id="marg-name">
-            <label for="ingredients">Ingredients</label>
-                <input type="text" name="ingredients" id="marg-ingredients">
-            <label for="glass">Glass</label>
-                <input type="text" name="glass" id="marg-glass">
+                <input type="text" name="name" id="marg-name" placeholder="Margarita">
+            <label for="ingredients">Ingredients</label >
+                <input type="text" name="ingredients" id="marg-ingredients" placeholder="Separate by commas">
+            <label for="glass">Glass</label > 
+                <input type="text" name="glass" id="marg-glass" placeholder="Cocktail glass">
             <label for="image">Image</label>
-                <input type="text" name="image" id="marg-image">
+                <input type="text" name="image" id="marg-image" placeholder=" Image URL">
             <label for="instructions">Instructions</label>
-                <textarea name="instructions" id="marg-instructions"></textarea>
+                <textarea name="instructions" id="marg-instructions" placeholder="Type instructions here"></textarea>
             <input type="submit" value="Bottoms Up!" id="submit-marg">
         </form>  
         </div>
