marg details styling

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <div class = "row">
     <div class = "column">
        <div id="margarita-details"> 
+        <div id="background-of-details"></div>
+        <div id="text-details">
         <h2 class= "name" >The Classic Margarita</h2>
         <h3 id ="ingredients-space">Ingredients:</h3>
         <ul class="ingredients">1 1/2 oz Tequila, 1/2 oz Triple sec, 1 oz Lime juice, Salt</ul>
@@ -20,6 +22,7 @@
         <p class= "instructions">Rub the rim of the glass with the lime slice to make the salt stick to it. Take care to moisten only the outer rim and sprinkle the salt on it. The salt should present to the lips of the imbiber and never mix into the cocktail. Shake the other ingredients with ice, then carefully pour into the glass.</p>
         <img class="image" src="https://www.thecocktaildb.com/images/media/drink/5noda61589575158.jpg"> 
        </div>
+    </div>
     </div> 
     <div class = "column" >
        <button id ="add-new-marg" >Add Your Own Margarita!</button>
