cleaned up JS and updated dbJson

--- a/index.html
+++ b/index.html
@@ -10,42 +10,42 @@
         <div id="top-container"></div>
     <div class = "row">
     <div class = "column">
-       <div id="margarita-details"> 
-        <div id="background-of-details"></div>
-        <div id="text-details">
-        <h2 class= "name" >The Classic Margarita</h2>
-        <h3 id ="ingredients-space">Ingredients:</h3>
-        <ul class="ingredients">1 1/2 oz Tequila, 1/2 oz Triple sec, 1 oz Lime juice, Salt</ul>
-        <h3 id="glass-space">Glass Type:</h3>
-        <p class="glass">Cocktail Glass</p>
-        <h3 id =instructions-space>Cocktail Instructions:</h3>
-        <p class= "instructions">Rub the rim of the glass with the lime slice to make the salt stick to it. Take care to moisten only the outer rim and sprinkle the salt on it. The salt should present to the lips of the imbiber and never mix into the cocktail. Shake the other ingredients with ice, then carefully pour into the glass.</p>
-        <img class="image" src="https://www.thecocktaildb.com/images/media/drink/5noda61589575158.jpg"> 
+        <div id="margarita-details"> 
+            <div id="background-of-details"></div>
+            <div id="text-details">
+            <h2 class= "name" >The Classic Margarita</h2>
+            <h3 id ="ingredients-space">Ingredients:</h3>
+            <ul class="ingredients">1 1/2 oz Tequila, 1/2 oz Triple sec, 1 oz Lime juice, Salt</ul>
+            <h3 id="glass-space">Glass Type:</h3>
+            <p class="glass">Cocktail Glass</p>
+            <h3 id =instructions-space>Cocktail Instructions:</h3>
+            <p class= "instructions">Rub the rim of the glass with the lime slice to make the salt stick to it. Take care to moisten only the outer rim and sprinkle the salt on it. The salt should present to the lips of the imbiber and never mix into the cocktail. Shake the other ingredients with ice, then carefully pour into the glass.</p>
+            <img class="image" src="https://www.thecocktaildb.com/images/media/drink/5noda61589575158.jpg"> 
        </div>
     </div>
     </div> 
     <div class = "column" >
-       <button id ="add-new-marg" >Add Your Own Margarita!</button>
-       <div id="form-wrapper">
-        <form id="new-marg" class="user-form">
-            <label for="name">Name</label>
-                <input type="text" name="name" id="marg-name" placeholder="Margarita">
-            <label for="ingredients">Ingredients</label >
-                <input type="text" name="ingredients" id="marg-ingredients" placeholder="Separate by commas">
-            <label for="glass">Glass</label > 
-                <input type="text" name="glass" id="marg-glass" placeholder="Cocktail glass">
-            <label for="image">Image</label>
-                <input type="text" name="image" id="marg-image" placeholder=" Image URL">
-            <label for="instructions">Instructions</label>
-                <textarea name="instructions" id="marg-instructions" placeholder="Type instructions here"></textarea>
-            <input type="submit" value="Bottoms Up!" id="submit-marg">
-        </form>  
+        <button id ="add-new-marg" class="onMouseover">Add Your Own Margarita!</button>
+        <div id="form-wrapper">
+            <form id="new-marg" class="user-form">
+                <label for="name">Name</label>
+                    <input type="text" name="name" id="marg-name" placeholder="Margarita">
+                <label for="ingredients">Ingredients</label >
+                    <input type="text" name="ingredients" id="marg-ingredients" placeholder="Separate by commas">
+                <label for="glass">Glass</label > 
+                    <input type="text" name="glass" id="marg-glass" placeholder="Cocktail glass">
+                <label for="image">Image</label>
+                    <input type="text" name="image" id="marg-image" placeholder=" Image URL">
+                <label for="instructions">Instructions</label>
+                    <textarea name="instructions" id="marg-instructions" placeholder="Type instructions here"></textarea>
+                <input type="submit" value="Bottoms Up!" id="submit-marg" class="onMouseover">
+            </form>  
         </div>
         <div id="comment-div">
             <h2 id="comment-header">We all have that one margarita story, what's yours?</h2>
             <form id="comment-form">
                 <textarea name="comments" id="user-comments"></textarea>
-                <input type="submit" value="Submit" id="submit-comment">
+                <input type="submit" value="Submit" id="submit-comment" class="onMouseover">
             </form>
         </div>
         <div id="comment-story"></div>
