added transparency CSS for displayed stories

--- a/index.html
+++ b/index.html
@@ -48,7 +48,11 @@
                 <input type="submit" value="Submit" id="submit-comment" class="onMouseover">
             </form>
         </div>
-        <div id="comment-story"></div>
+        <div id="story-wrapper">
+        <div id="story-background"></div>
+        <div id="comment-story">
+        </div>
+        </div>
     </div>
     </div>
     </body>
