ingredient input fields are now rendering and persisting

--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
             <form id="new-marg" class="user-form">
                 <label for="name">Name</label>
                     <input type="text" name="name" id="marg-name" placeholder="Margarita">
+                <span id="marg-button" class="onMouseover">+</span>
                 <label for="ingredients">Ingredients</label >
-                    <input type="text" name="ingredients" id="marg-ingredients" placeholder="Separate by commas">
+                <div id="ingredients-div"></div>
                 <label for="glass">Glass</label > 
                     <input type="text" name="glass" id="marg-glass" placeholder="Cocktail glass">
                 <label for="image">Image</label>
